--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,19 @@
         </div>
 
         <div id="error-message" class="error hidden"></div>
+
+        <footer class="footer">
+            <div class="footer-links">
+                <a href="https://tinyurl.com/" target="_blank" class="footer-link">
+                    <i class="material-icons">link</i>
+                    TinyURL Website
+                </a>
+                <a href="https://github.com/christo707/tiny-url-shortner-chrome-extension" target="_blank" class="footer-link">
+                    <i class="material-icons">code</i>
+                    Source Code
+                </a>
+            </div>
+        </footer>
     </div>
     <script src="popup.js"></script>
 </body>
